# median_filter

./: CMakeLists.txt  README.md
include/: median_filter.h
src/: main.c  median_filter.c
utils/: get_signal.py  plot_signal.py
